testdata/baselines/reference/submodule/conformance/classStaticBlock19.errors.txt
error TS-1: Pre-emit (1) and post-emit (2) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
classStaticBlock19.ts(2,5): error TS1206: Decorators are not valid here.


!!! error TS-1: Pre-emit (1) and post-emit (2) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2304 classStaticBlock19.ts:2:6: Cannot find name 'decorator'.
==== classStaticBlock19.ts (1 errors) ====
    class C {
        @decorator
        ~
!!! error TS1206: Decorators are not valid here.
        static {
            // something
        }
    }
    